--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,10 @@
+---
+import "@fontsource/preahvihear"
+import "../styles/global.css"
+import Header from "../components/Header.astro"
+
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -7,16 +14,35 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body>
+	<body class="relative text-black dark:text-white">
+		<div
+		 class="
+		   absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gray-50 dark:bg-[#11071F]
+           bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))]
+           dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(50,15,133,0.8),rgba(255,255,255,0))]
+		 "
+		>
+		</div>
+		<Header/>
 		<slot />
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+<style is:global>
+	:root{
+		color-scheme: light dark;
+	}
+
+	html{
+	    font-family: 'Preahvihear', sans-serif;
+		scroll-behavior: smooth;
+	}
+
+	body{
+		/* color: rgba(17, 17, 17, 0.9); */
+		display: flex;
+		flex-direction: column;
+		min-height: 100vh;
+		overscroll-behavior: none;
 	}
 </style>
