--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -32,7 +32,7 @@ import LinkedInIcon from "./icons/Linkedln.astro"
          <MailIcon  class="size-4"/>
          Contactame
       </SocialPill>
-      <SocialPill href="https://linkedin.com/in/midudev">
+      <SocialPill href="https://linkedin.com/in/manuel-gomez-58b66023a">
          <LinkedInIcon class="size-4" />
          LikedIn
       </SocialPill>
