--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,7 +26,7 @@ const navItems =[
 
 
 <header
- class="fixed to-0 z-0 flex items-center justify-center w-full mx-auto "
+ class="fixed to-0 z-90 flex items-center justify-center w-full mx-auto "
 >
 <nav
  class="flex px-3 py-1 text-sm font-medium  w-full text-gray-600  dark:text-gray-200  justify-center items-center"
@@ -97,7 +97,7 @@ const navItems =[
 
 
  nav {
-    @apply dark:bg-purple-800/50 bg-white/50;
+    @apply dark:bg-purple-800 bg-white/50;
   }
 
 
