--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,15 @@
 import "@fontsource/preahvihear"
 import "../styles/global.css"
 import Header from "../components/Header.astro"
+import Footer from "../components/Footer.astro"
+import { ViewTransitions } from "astro:transitions"
+
+interface Props{
+	title:string,
+	description:string
+}
+
+const {title,description}=Astro.props
 
 ---
 
@@ -10,9 +19,11 @@ import Header from "../components/Header.astro"
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+        <meta name="description" content={description} />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
+		<ViewTransitions/>
 	</head>
 	<body class="relative text-black dark:text-white">
 		<div
@@ -25,6 +36,7 @@ import Header from "../components/Header.astro"
 		</div>
 		<Header/>
 		<slot />
+		<Footer/>
 	</body>
 </html>
 
