--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,33 +6,43 @@ import BriefCase from '../components/icons/BriefCase.astro';
 import CodeIcon from "../components/icons/Code.astro"
 import TitleSection from '../components/TitleSection.astro';
 import ProfileCheck from "../components/icons/ProfileCheck.astro"
+import Experience from '../components/Experience.astro';
+import Projects from '../components/Projects.astro';
+import AboutMe from '../components/AboutMe.astro';
 ---
 
-<Layout>
+<Layout
+ title='Portafolio de Manuel Gomez'
+ description='Sitio web de presentacion, recurso para contracion, evidencias de mi trabajo en el desarrollo web, movil y desktop'
+>
 	<main class="px-4">
 		<SectionContainer class="py-15 md:py-36">
           <Hero>
 			<slot/>
 		  </Hero>
 		</SectionContainer>
-		<SectionContainer id="experiencia">
+		<div class="space-y-24">
+			<SectionContainer id="experiencia">
 			<TitleSection>
 				<BriefCase class="size-8"/>
 				Experiencia laboral
 			</TitleSection>
+			<Experience/>
 		</SectionContainer>
 		<SectionContainer id="proyectos">
 			<TitleSection>
 				<CodeIcon class="size-7"/>
                 Proyectos
 			</TitleSection>
+			<Projects/>
 		</SectionContainer>
 		<SectionContainer id="sobre-mi">
 	        <TitleSection>
 				<ProfileCheck class="size-8"/>
 				Sobre mi 
 			</TitleSection>
+			<AboutMe/>
 		</SectionContainer>
-
+		</div>
 	</main>
 </Layout>
